# filling-pilot-edge-rs

./: .gitignore  Cargo.toml  README.md  build.rs  fix-issues-log.md
proto/: fillingPilot.proto
src/: context.rs  deploy.rs  error.rs  http.rs  lib.rs  logger.rs  main.rs  s7.rs
src/codec/: codec.rs  data_block.rs  mod.rs  property.rs
src/grpc/: cloud.rs  mod.rs
src/processor/: mod.rs  read.rs  restart.rs  status.rs  upgrade.rs  version_report.rs  write.rs
src/proto/: fillingPilot.proto
src/report/: cache.rs  fill_station.rs  mod.rs  monitor.rs  plc_report.rs
